<resources>
    <string name="app_name">Sketch Me</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="check_out_the_examples_here">Check out the examples <u>here.</u></string>
    <string name="icon_order">Icon Order</string>
    <string name="logo_of_sketch_me">Logo of Sketch Me</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="photo_of_user">Photo of User</string>
    <string name="contour">Contour</string>
    <string name="background">Background</string>
    <string name="size">Size</string>
    <string name="loading">Loading</string>
    <string name="order">Order</string>
</resources>