<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/customBlack"
    android:overScrollMode="never"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_bg_home"
        tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:id="@+id/layoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:weightSum="1"
            app:layout_constraintBottom_toTopOf="@+id/viewPager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/photo_of_user"
                android:src="@drawable/ic_person_white_24pd" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/prompt"
                tools:text="Arif Rahman Hakim" />

            <ImageView
                android:id="@+id/btnLogout"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/photo_of_user"
                android:src="@drawable/ic_logout_white_24_dp" />

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@+id/layoutType"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutProfile" />

        <LinearLayout
            android:id="@+id/layoutType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:visibility="visible"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/layoutValueType"
            app:layout_constraintTop_toBottomOf="@+id/viewPager">


            <LinearLayout
                android:id="@+id/layoutSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvStatusSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/customWhiteLight"
                    android:textSize="20sp"
                    app:fontFamily="@font/rubik" />

                <View
                    android:id="@+id/statusSize"
                    android:layout_width="30dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_item" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvStatusBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background"
                    android:textColor="@color/customWhiteDark"
                    android:textSize="20sp"
                    app:fontFamily="@font/rubik" />

                <View
                    android:id="@+id/statusBackground"
                    android:layout_width="30dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_item"
                    android:visibility="invisible" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutContour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvStatusContour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contour"
                    android:textColor="@color/customWhiteDark"
                    android:textSize="20sp"
                    app:fontFamily="@font/rubik" />

                <View
                    android:id="@+id/statusContour"
                    android:layout_width="30dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_item"
                    android:visibility="invisible" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutValueType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutType">

            <TextView
                android:id="@+id/tvValueType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/customWhiteLight"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/prompt"
                tools:text="Half Body" />


            <TextView
                android:id="@+id/tvExample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_out_the_examples_here"
                android:textColor="@color/customWhiteLight"
                android:textSize="14sp"
                app:fontFamily="@font/roboto" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>